Bug 960290 - email: possible to trigger off-screen compose button

--- a/apps/email/style/common.css
+++ b/apps/email/style/common.css
@@ -61,10 +61,7 @@ body {
 }
 
 .card.before {
-  /* Show a sliver of the before card, to kickstart
-  platform for a smooth, non-black transition: 828266.
-  Otherwise, this would just be -100% */
-  transform: translateX(calc(-100% + 0.5px));
+  transform: translateX(-100%);
 }
 
 .card.before.anim-vertical {
@@ -72,10 +69,7 @@ body {
 }
 
 .card.after {
-  /* Show a sliver of the after card, to kickstart
-  platform for a smooth, non-black transition: 828266.
-  Otherwise, this would just be 100% */
-  transform: translateX(calc(100% - 0.5px));
+  transform: translateX(100%);
 }
 
 .card.after.anim-vertical {
